# advertising-analyzer

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/analyzer/: ad_analyzer.py
backend/src/api/: main.py
backend/src/detector/: yolo_detector.py
backend/src/utils/: logging.py
debug_frames/: .gitkeep
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: UploadVideo.vue  VideoHistory.vue  VideoPlayerModal.vue
frontend/src/utils/: generateReportPDF.js
