[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Corner324 <alexx324@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
opencv-python = "^4.11.0.86"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.1"
ultralytics = "8.3.13"
torch = { version = "2.4.1", source = "pytorch-cpu" }
torchvision = { version = "0.19.1", source = "pytorch-cpu" }
scipy = "^1.15.2"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
